--- a/about.yml
+++ b/about.yml
@@ -1,3 +1,8 @@
 ---
 title: Werkzeuge zur Analyse von Bibliotheksdaten
+author:
+  - Jakob Voß (VZG)
+  - Nico Wagner (DNB)
+institute: Bibliothekskongress 2022
+date: 2022-05-31
 ...
