--- a/about.yml
+++ b/about.yml
@@ -3,7 +3,9 @@ title: Werkzeuge zur Analyse von Bibliotheksdaten
 author:
   - Jakob Voß (VZG)
   - Nico Wagner (DNB)
-institute: Bibliothekskongress 2022
+institute: |
+  Bibliothekskongress 2022 \
+  <https://jakobib.github.io/bibtag2022/>
 date: 2022-05-31
 header-includes: |
 	\usepackage{caption}
